Added unit tests for function "string->float".