@@ -1837,7 +1837,7 @@ public final class SModuleString
         try {
             result = Integer.valueOf(str);
         } catch ( NumberFormatException e ) {
-            result = SObjNull.NULL
+            result = SObjNull.NULL;
         }
 
         return result;
@@ -1849,8 +1849,8 @@ public final class SModuleString
 
 //* 
 //* <TeaFunction name="string->float"
-//*                 arguments="aString"
-//*             module="tea.string">
+//*              arguments="aString"
+//*              module="tea.string">
 //*
 //* <Overview>
 //* Converts a string into a float object.
@@ -1884,17 +1884,15 @@ public final class SModuleString
                                                 final Object[]     args)
         throws STeaException {
 
-        if ( args.length != 2 ) {
-            throw new SNumArgException(args, "string");
-        }
+        SArgs.checkCount(args, 2, "string");
 
+        Object result = null;
         String str    = SArgs.getString(args,1);
-        Object result = SObjNull.NULL;
 
         try {
-            result = new Double(str);
-        } catch (NumberFormatException e) {
-            // We will just end up returning null.
+            result = Double.valueOf(str);
+        } catch ( NumberFormatException e ) {
+            result = SObjNull.NULL;
         }
 
         return result;
